--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.10",
+    "d3": "^7.9.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "d3": "^7.9.0"
+    "react-icons": "^5.5.0",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
-    "@types/d3": "^7.4.3",
     "@vitejs/plugin-react": "^4.3.1",
+    "tailwindcss": "^4.1.10",
     "typescript": "^5.4.5",
-    "vite": "^5.3.1",
-    "tailwindcss": "^4.0.0-alpha.13"
+    "vite": "^5.3.1"
   }
 }
